--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Saad Hassan</title>
 </head>
 <body>
-<h1> Hello Saad Hassan! it's a great course</h1>
+<h1> Hello Saad Hassan! it's a great course!</h1>
 </body>
 </html>
